updated z-indexes to put navbar and footer on top, issue displaying loading screen going to test toast context first before coming back

--- a/client/src/components/shared/admin-navbar/admin-navbar.css
+++ b/client/src/components/shared/admin-navbar/admin-navbar.css
@@ -2,6 +2,7 @@
   position: absolute;
   left: 0;
   padding: 1rem;
+  z-index: 100;
 }
 
 .admin-navbar a {
