--- a/client/src/components/shared/footer/footer.css
+++ b/client/src/components/shared/footer/footer.css
@@ -1,6 +1,8 @@
 .footer {
   background-color: var(--neutral-color);
-  padding-top: 50px;
+  padding-top: 3em;
+  position: relative;
+  z-index: 100;
 }
 
 .social-icons {
