--- a/client/src/components/shared/loading/loading-spinner/loading-spinner.css
+++ b/client/src/components/shared/loading/loading-spinner/loading-spinner.css
@@ -17,9 +17,9 @@
 }
 
 .loading-spinner-container {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: absolute;
-  background: rgba(0, 0, 0, 0.7);
-  z-index: 100;
+  background: whitesmoke;
+  z-index: 99;
 }
