--- a/client/src/styles/custom-styles.css
+++ b/client/src/styles/custom-styles.css
@@ -54,3 +54,7 @@ svg {
   font-size: 1.25em;
   font-weight: 400;
 }
+
+.main-content {
+  min-height: 65vh;
+}
